--- a/Views/Facturacion/BuscarFactura.cshtml
+++ b/Views/Facturacion/BuscarFactura.cshtml
@@ -1,28 +1,34 @@
-<div class="row">
-  <div class="col-md-6">
-    <label for="rdbNumeroFactura">Número de factura</label>
-    <input type="radio" name="rdbTipoBusqueda" id="rdbNumeroFactura" value="numeroFactura" />
+<fieldset class="form-group">
+  <div class="row alert alert-info">
+    <legend class="col-form-label col-sm-2 pt-0">Tipo de Busqueda</legend>
+
+
+    <div class="col">
+      <label for="rdbNumeroFactura">Número de factura</label>
+      <input type="radio" name="rdbTipoBusqueda" id="rdbNumeroFactura" value="numeroFactura" />
+    </div>
+    <div class="col">
+      <label for="rdbCliente">Cliente</label>
+      <input type="radio" name="rdbTipoBusqueda" id="rdbCliente" value="cliente" />
+    </div>
   </div>
-  <div class="col-md-6">
-    <label for="rdbCliente">Cliente</label>
-    <input type="radio" name="rdbTipoBusqueda" id="rdbCliente" value="cliente" />
+  <div class="container col-md-12">
+    <div class="row">
+      <div class="col input-group">
+        <label class="col-form-label" for="txtNumeroFactura">Número de factura</label>
+        <input type="text" class="form-control" id="txtNumeroFactura" />
+      </div>
+      <div class="col input-group" id="selectorCliente">
+
+        
+      </div>
+      <div class="col input-group">
+
+        <button type="submit" class="btn btn-primary">Buscar</button>
+      </div>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-md-6">
-    {{#if tipoBusqueda == 'numeroFactura'}}
-      <label for="txtNumeroFactura">Número de factura</label>
-      <input type="text" class="form-control" id="txtNumeroFactura" />
-    {{/if}}
-    {{#if tipoBusqueda == 'cliente'}}
-      <label for="cmbCliente">Cliente</label>
-      <select class="form-control" id="cmbCliente">
-        <option value="">Seleccionar</option>
-        <option value="1">Cliente 1</option>
-        <option value="2">Cliente 2</option>
-        <option value="3">Cliente 3</option>
-      </select>
-    {{/if}}
-  </div>
-</div>
-<button type="submit" class="btn btn-primary">Buscar</button>
+  @section Scripts
+  {
+    <script src="~/js/buscarFactura.js"></script>
+  }
